fixed the loading screen so that they don’t collapse

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1214,6 +1214,9 @@ Hero section
 .header-slider {
 	overflow: hidden;
 }
+.sydney-hero-area {
+	height: 92vh;
+}
 .loading-container {
     position: absolute;
     left: 50%;
